<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Aula03AgendaTelefones</string>
    <string name="action_settings">Settings</string>
    <string name="nome">Digite o nome aqui</string>
    <string name="fone">Digite o fone aqui</string>
    <string name="inserir">Inserir</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>
    <string name="contatos">Contatos</string>
    
    
</resources>
